--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -68,10 +68,10 @@
             </ul>
             <li>CallingApi's</li>
             <ul>
-                <li><a href="./TypeScript/Project/CallingApi's/CoronaApi.html">CoronaApi</a></li>
-                <li><a href="./TypeScript/Project/CallingApi's/flipcartApi.html">FlipkartApi</a></li>
-                <li><a href="./TypeScript/Project/CallingApi's/github.html">GithubApi</a></li>
-                <li><a href="./TypeScript/Project/CallingApi's/jasonphotos.html">JsonApi</a></li>
+                <li><a href="./TypeScript/Project/CallingApi/CoronaApi.html">CoronaApi</a></li>
+                <li><a href="./TypeScript/Project/CallingApi/flipcartApi.html">FlipkartApi</a></li>
+                <li><a href="./TypeScript/Project/CallingApi/github.html">GithubApi</a></li>
+                <li><a href="./TypeScript/Project/CallingApi/jasonphotos.html">Pokemon</a></li>
             </ul>
             <li><a href="./TypeScript/Project/Dynamiccalc.html">Dynamic Calculator javaScript</a></li>
             <li><a href="./TypeScript/Project/staticCalculator.html">Static Calculator javaScript</a></li>
