--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -71,7 +71,8 @@
                 <li><a href="./TypeScript/Project/CallingApi/CoronaApi.html">CoronaApi</a></li>
                 <li><a href="./TypeScript/Project/CallingApi/flipcartApi.html">FlipkartApi</a></li>
                 <li><a href="./TypeScript/Project/CallingApi/github.html">GithubApi</a></li>
-                <li><a href="./TypeScript/Project/CallingApi/jasonphotos.html">Pokemon</a></li>
+                <li><a href="./TypeScript/Project/CallingApi/PokeMon.html">Pokemon</a></li>
+                <li><a href="./TypeScript/Project/CallingApi/Jsonphotos.html">Jsonphotos</a></li>
             </ul>
             <li><a href="./TypeScript/Project/Dynamiccalc.html">Dynamic Calculator javaScript</a></li>
             <li><a href="./TypeScript/Project/staticCalculator.html">Static Calculator javaScript</a></li>
