--- a/Front/fullstack/frontend/languges/TypeScript/Project/StopWatch/StopWatch.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Project/StopWatch/StopWatch.html
@@ -12,31 +12,33 @@
 </head>
 
 <body>
-	<div class="container">
-		<h1>StopWatch JavaScript</h1>
-		<div id="time">
-			<span class="digit" id="hr">
-				00</span>
-			<span class="txt">Hr</span>
-			<span class="digit" id="min">
-				00</span>
-			<span class="txt">Min</span>
-			<span class="digit" id="sec">
-				00</span>
-			<span class="txt">Sec</span>
-			<span class="digit" id="count">
-				00</span>
+	<center>
+		<div class="container">
+			<h1>StopWatch JavaScript</h1>
+			<div id="time">
+				<span class="digit" id="hr">
+					00</span>
+				<span class="txt">Hr</span>
+				<span class="digit" id="min">
+					00</span>
+				<span class="txt">Min</span>
+				<span class="digit" id="sec">
+					00</span>
+				<span class="txt">Sec</span>
+				<span class="digit" id="count">
+					00</span>
+			</div>
+			<div id="buttons">
+				<button class="btn" id="start">
+					Start</button>
+				<button class="btn" id="stop">
+					Stop</button>
+				<button class="btn" id="reset">
+					Reset</button>
+			</div>
 		</div>
-		<div id="buttons">
-			<button class="btn" id="start">
-				Start</button>
-			<button class="btn" id="stop">
-				Stop</button>
-			<button class="btn" id="reset">
-				Reset</button>
-		</div>
-	</div>
-
+	
+	</center>
 	<script src="stop.js"></script>
 </body>
 
