--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -81,6 +81,7 @@
                 <li><a href="./TypeScript/Project/DigitalClock/digclock.html">DigClock</a></li>
                 <li><a href="./TypeScript/Project/DigitalClock/digclock.html">Digital Clock</a></li>
             </ul>
+            <li><a href="./TypeScript/Project/StopWatch/StopWatch.html">StopWatch</a></li>
 
         </ul>
         <li>Condition</li>
