--- a/Front/fullstack/frontend/languges/TypeScript/Async-Await/sipmleBilling.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Async-Await/sipmleBilling.html
@@ -1,3 +1,13 @@
+<h1>Async-Await</h1>
+<p>Async is multi-thread ,whicj means operations or programs can run in parallel.</p>
+<p>await keyword is used inside the async function to wait for the async operations.
+   <br>The use of await pauses the asybc function until the promise returns a results value.</p>
+
+
+
+
+
+
 <script>
    async function billing(){
         let p1=250
