--- a/Front/fullstack/frontend/languges/TypeScript/Fetch/fetch.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Fetch/fetch.html
@@ -1,3 +1,7 @@
+<p>The fetch() method starts the process of fetching a resource from a server.</p>
+
+
+
 <script>
 
    // let apiData= fetch('https://fakestoreapi.com/products')
@@ -25,6 +29,7 @@
 //    console.log(apiData2)
 //    }
 //    apicaller2()
+
 
    async function apicaller(){
     let apiData= fetch('https://jsonplaceholder.typicode.com/photos')
