--- a/Front/fullstack/frontend/languges/index.html
+++ b/Front/fullstack/frontend/languges/index.html
@@ -96,16 +96,30 @@
         </ul>
         <li><a href="./TypeScript/Async-Await/sipmleBilling.html">Async-Await</a></li>
         <li><a href="./TypeScript/Fetch/fetch.html">Fetch</a></li>
-        <li><a href="./TypeScript/Promiss/promis.html">Promise</a></li>
+        <li><a href="./TypeScript/Promise/promise.html">Promise</a></li>
         <li>Module</li>
         <ul>
             <li><a href="./TypeScript/Module/problem/problem.html">Problem</a></li>
             <li><a href="./TypeScript/Module/static/taju-birthday.html">Static</a></li>
+            <li><a href="./TypeScript/Module/Dynamic/Dynamic.html">Dynamic</a></li>
         </ul>
         <li>SyncAsync</li>
         <ul>
             <li><a href="./TypeScript/SyncAsync/problem.html">Problem</a></li>
             <li><a href="./TypeScript/SyncAsync/sync.html">Sync</a></li>
+        </ul>
+        <li>Rest-Spread-Copy-Arry-Copy-Obj</li>
+        <ul>
+            <li><a href="./TypeScript/Rest-Spread-Copy-Arry-Copy-Obj/Rest.html">Rest</a></li>
+            <li><a href="./TypeScript/Rest-Spread-Copy-Arry-Copy-Obj/Spresd.html">Spread</a></li>
+            <li><a href="./TypeScript/Rest-Spread-Copy-Arry-Copy-Obj/CopyofObject.html">CopyofObject</a></li>
+            <li><a href="./TypeScript/Rest-Spread-Copy-Arry-Copy-Obj/CopyofArray.html">CopyofArray</a></li>
+        </ul>
+        <li>Loops</li>
+        <ul>
+            <li><a href="./TypeScript/Loops/Forloop.html">For loop</a></li>
+            <li><a href="./TypeScript/Loops/Whileloop.html">While loop</a></li>
+            <li><a href="./TypeScript/Loops/Dowhileloop.html">Dowhile loop</a></li>
         </ul>
 
            
