--- a/Front/fullstack/frontend/index.html
+++ b/Front/fullstack/frontend/index.html
@@ -22,6 +22,7 @@
       <ul>
         <li><a href="./languges/index.html">Languages</a></li>
         <li><a href="./Frameworks/index.html">Frameworks</a></li>
+        <li><a href="./Libraries/react-flipkart/public/index.html">Libraries</a></li>
       </ul>
 
     
