--- a/Front/fullstack/frontend/index.html
+++ b/Front/fullstack/frontend/index.html
@@ -25,6 +25,8 @@
         <li><a href="./Libraries/react-flipkart/public/index.html">Libraries</a></li>
       </ul>
 
+      <h1>DataBase</h1>
+
     
 </body>
 </html>
