--- a/Front/fullstack/frontend/languges/TypeScript/Functions/pure.html
+++ b/Front/fullstack/frontend/languges/TypeScript/Functions/pure.html
@@ -1,6 +1,6 @@
 
 <h1>Pure Function</h1>
-<p>A Pure Function is a function (a block of code) that always returns the same result if the same arguments are passed. <br> It does not depend on any state or data change during a program’s execution. Rather, it only depends on its input arguments.</p>
+<p>A Pure Function is a function (a block of code) that always returns the same result if the same arguments are passed. <br> It does not depend on any state or data change during a programs execution. Rather, it only depends on its input arguments.</p>
 
 
 <script>
